--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 	<br>
-	<!-- why is my copyright linking to twitter -->
+	<!-- why is my copyright linking to twitter so weird -->
 <div class="copy">Copyright 2015. Relaxr. </div>
 </div>
 		</footer>
